fix overflow carousel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,6 +270,7 @@ html {
 #myCarousel {
 	margin-bottom: 0;
 	max-height: 250px;
+	overflow-y: hidden;
 }
 .carousel-control-prev:hover,
 .carousel-control-next:hover {
